FIX :: 전체적인 스타일 dark mode 수정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,12 @@
   }
   body{
     font-size: 1.5rem;
+    @apply text-text
   }
 }
 
 @layer components{
   .gray-button {
-    @apply active:scale-90 hover:bg-grayHover duration-250 rounded-xl text-textLightGray cursor-pointer inline-flex items-center justify-center
+    @apply active:scale-90 dark:hover:bg-darkHover hover:bg-lightHover duration-250 rounded-xl dark:text-textLightGray cursor-pointer inline-flex items-center justify-center
   }
 }
